readded link for icons to help.html

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <div class="col-md-4">
           <h2>Problem 2 - Electricity</h2>
-          <p>Believe it or not, but electricity is another major reason that effects the health of our earth's climate. Across the US many Americans are using too much electricity for their devices in their home. With more and more technologies becoming widely used such as: smartphones, tablets, bluetooth speakers, TV's, battery chargers and many other devices, they consume much more energy when they are powered off, so unplugging them is recommended. The cost of electricity is at an all time high and hundreds of millions of dollars are being spent. The high usage of electricity increases the amount of more than 1 million metric tons of greenhouse gases being released into the atmosphere</p>
+          <p>Believe it or not, but electricity is another major reason that effects the health of our earth's climate. Across the US many Americans are using too much electricity for their devices in their home. With more and more technologies becoming widely used such as: smartphones, tablets, bluetooth speakers, TV's, battery chargers and many other devices, they consume much more energy when they are powered off, so unplugging them int s recommended. The cost of electricity is at an all time high and hundreds of millions of dollars are being spent. The high usage of electricity increases the amount of more than 1 million metric tons of greenhouse gases being released into the atmosphere</p>
        </div>
         <div class="col-md-4">
           <h2>Problem 3 - Sea levels</h2>
