Updated layout for masthead when in mobile view

--- a/help.html
+++ b/help.html
@@ -17,37 +17,38 @@
  <div id="bootstrap-override">
  <header>
     <!-- this is the place for navbar and masthead -->
-            <div class="masthead">
                 <div class="container">
+           <!-- this is the place for navbar and masthead -->
+            <nav class="navbar navbar-inverse navbar fixed-top">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="index.html">World Climate Organization</a>
+                    </div>
+                    <div id="navbar" class="collapse navbar-collapse">
+                     <ul class="nav navbar-nav">
+                    <li><a href="index.html"><i class="fa fa-home fa-2x"></i>Home</a></li>
+                    <li class="active"><a href="help.html">Things You Can Do<i class="fa fa-question-circle fa-2x"></i></a></li>
+                            <li><a href="contact.html">Contact<i class="fa fa-phone-square fa-2x"></i></a></li>
+                    </ul>
+                </div>
+            </nav>
+            </div>
+            
+            <!-- Masthead --> 
+            <div class="container">
+                <div class="masthead">
                     <div class="row">
                     </div>
                 </div>
             </div>
-     <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                    aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">World Climate Organization</a>
-            </div>
-            <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-        <li><a href="index.html"><i class="fa fa-home fa-2x"></i>Home</a></li>
-                     <li class="active"><a href="help.html">Things You Can Do<i class="fa fa-question-circle fa-2x"></i></a></li>
-                    <li><a href="contact.html">Contact<i class="fa fa-phone-square fa-2x"></i></a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
     </header>
     <main>
     <!-- this is the place for Bootstrap Cards -->
-    <br/><br/><br/>
     <div class="container text-center">
     <h4><b>Help Fight Climate Change</b></h4>
     <ol id="steps" class="list-group">
