Revert "Updated layout for masthead when in mobile view"
This reverts commit be13f0bf2c672aaa8aa7631d3d1d351579d2a443.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
 <body>
     <div id="bootstrap-override">
         <header>
-              <div class="container">
-           <!-- this is the place for navbar and masthead -->
-            <nav class="navbar navbar-inverse navbar fixed-top">
+            <!-- this is the place for navbar and masthead -->
+            <div class="masthead">
+                <div class="fluid container">
+                    <div class="row">
+                    </div>
+                </div>
+            </div>
+            <nav class="navbar navbar-inverse navbar-fixed-top">
+                <div class="container">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                             <span class="sr-only">Toggle navigation</span>
@@ -27,30 +33,24 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html">World Climate Organization</a>
+                        <a class="navbar-brand" href="index.html">
+                   World Climate Organization</a>
                     </div>
                     <div id="navbar" class="collapse navbar-collapse">
-                     <ul class="nav navbar-nav">
+                        <ul class="nav navbar-nav">
                     <li class="active"><a href="index.html"><i class="fa fa-home fa-2x"></i>Home</a></li>
                     <li><a href="help.html">Things You Can Do<i class="fa fa-question-circle fa-2x"></i></a></li>
                             <li><a href="contact.html">Contact<i class="fa fa-phone-square fa-2x"></i></a></li>
-                    </ul>
-                </div>
-            </nav>
-            </div>
-            
-            <!-- Masthead --> 
-            <div class="container">
-                <div class="masthead">
-                    <div class="row">
+                        </ul>
                     </div>
                 </div>
             </div>
+            </nav>
         </header>
         <main>
             <!-- this is the place for jumbotron button -->
             <div class="container">        
-                <br>
+                <br><br><br><br><br><br><br><br>
                 <div class="col-md-12 jumbotron text-center">    
            <h1>OUR GOAL</h1>
             <p><b>MISSION</b><br>Our Mission is to provide knowledge about the real problem of climate change. Too many people don't take climate change seriously. Climate change is a very real problem and the World Climate Organization will bring real change and policies which help to address the risk of climate change and global warming.</p><br>
