--- a/contact.html
+++ b/contact.html
@@ -18,40 +18,50 @@
 <div id="bootstrap-override">
 <header>
     <!-- this is the place for navbar and masthead -->
-            <div class="container">
-            <nav class="navbar navbar-inverse navbar fixed-top">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="index.html">World Climate Organization</a>
-                    </div>
-                    <div id="navbar" class="collapse navbar-collapse">
-                     <ul class="nav navbar-nav">
-                    <li><a href="index.html"><i class="fa fa-home fa-2x"></i>Home</a></li>
-                    <li><a href="help.html">Things You Can Do<i class="fa fa-question-circle fa-2x"></i></a></li>
-                            <li class="active"><a href="contact.html">Contact<i class="fa fa-phone-square fa-2x"></i></a></li>
-                    </ul>
-                </div>
-            </nav>
-            </div>
-            
-            <!-- Masthead --> 
-            <div class="container">
-                <div class="masthead">
+            <div class="masthead">
+                <div class="container">
                     <div class="row">
                     </div>
                 </div>
             </div>
+
+            <div class="bg-img">
+                 <div class="container">
+                    <div class="row">
+                    </div>
+                </div>
+            </div>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                    aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">
+                    World Climate Organization
+                </a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html"><i class="fa fa-home fa-2x"></i>Home</a></li>
+                    <li><a href="help.html">Things You Can Do<i class="fa fa-question-circle fa-2x"></i></a></li>
+                    <li class="active"><a href="contact.html">Contact<i class="fa fa-phone-square fa-2x"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     </header>
     <main>
     <!-- this is the place for Google static map-image -->
     <div class="container">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+            <br><br><br><br><br><br>
     <h3>LOCATION</h3>
+    <br>
     <div class="col-md-12">
         <div class="row">
             <div class="map"></div>
@@ -62,7 +72,9 @@
      <!-- Form text fields -->
         <div class="container">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+            <br><br>
             <div class="content2">
+                <br><br><br><br>
                 <h3>CONTACT US</h3>
                 <br>
             <form id="contactForm" class="form-horizontal">
