--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
             <!-- this is the place for navbar and masthead -->
             <div class="masthead">
-                <div class="fluid container">
+                <div class="container">
                     <div class="row">
                     </div>
                 </div>
